test/expect/cmd.cc-gnu-bad-cmd.stderr.txt
^error: '--castxml-cc-gnu' compiler command failed:

 'cc-gnu-bad-cmd' '-E' '-dM' '-v' '.*/share/castxml/empty.cpp'
